<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TestTube</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="video">Video</string>
    <string name="cancel">Cancel</string>
    <string name="download">Download</string>
    <string name="queue">Queue</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="queue_item_added">Added to queue</string>
    <string name="queue_item_unavailable">Couldn\'t get current video info. Queue item was not added.</string>
    <string name="queue_enabled_on">Queue playback enabled</string>
    <string name="queue_enabled_off">Queue playback disabled</string>
    <string name="clear_queue">Clear queue</string>
    <string name="clear_queue_confirmation">Clear all queue items?</string>
    <string name="remove_queue_item">Remove queue item</string>
    <string name="remove_queue_item_confirmation">Remove this queue item?</string>
    <string name="no_queue_items">No queue items</string>
    <string name="queue_unknown_author">Unknown author</string>
    <string name="queue_now_playing">Now playing</string>
    <string name="queue_download_unavailable">No queue items available to download</string>
    <string name="video_quality">Video Quality</string>
    <string name="confirm">Confirm</string>
    <string name="select_something_first">Please select an item first</string>
    <string name="failed_to_download">Failed to download</string>
    <string name="audio_only">Audio</string>
    <string name="close">Close</string>
    <string name="share">Share</string>
    <string name="action_pause">Pause</string>
    <string name="action_play">Play</string>
    <string name="action_replay">Replay</string>
    <string name="action_previous">Skip to previous</string>
    <string name="action_next">Skip to next</string>
    <string name="segments">Segments</string>
    <string name="pip">Picture-in-Picture</string>
    <string name="reset">Reset</string>
    <string name="player_quality_auto">Auto</string>
    <string name="action_fullscreen">Fullscreen</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="unlock_screen">Unlock screen</string>
    <string name="error_title">Error</string>
    <string name="copy">Copy</string>
    <string name="debug_info_copied">Debug info copied to clipboard</string>
    <string name="playback_end_next">Play next</string>
    <string name="playback_end_loop">Loop video</string>
    <string name="playback_end_pause">Pause at end</string>
    <string name="playback_end_playlist_random">Playlist shuffle</string>
    <string name="subtitles">Captions</string>
    <string name="subtitles_on">Captions on</string>
    <string name="subtitles_off">Captions off</string>
    <string name="no_subtitles">No captions</string>
    <string name="jumped_to_segment">Jumped to: %1$s</string>
    <string name="jump">Jump</string>
    <string name="bitrate">Bitrate</string>
    <string name="dropped_frames">Dropped Frames</string>
    <string name="resolution">Resolution</string>
    <string name="video_format">Video Format</string>
    <string name="audio_format">Audio Format</string>
    <string name="fps">FPS</string>
    <string name="channels">Channels</string>
    <string name="sample_rate">Sample Rate</string>
    <string name="active_stream_video">Video stream #%1$d [%2$s]: %3$s %4$s %5$s</string>
    <string name="active_stream_audio">Audio stream: %1$s %2$s %3$s</string>
    <string name="unknown">Unknown</string>
    <string name="active_label">Active</string>
    <string name="unknown_bitrate">Unknown bitrate</string>
    <string name="unable_to_get_stream_info">Unable to get stream info</string>
    <string name="audio_track">Audio Track</string>
    <string name="info">Info</string>
    <string name="more_options">More options</string>
    <string name="failed_to_load_video_details">Failed to load video details</string>
    <string name="application_not_found">Application not found</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="threads">Threads</string>
    <string name="clear">Clear</string>
    <string name="download_tasks_added">Download tasks added</string>
    <string name="download_tasks_added_count" tools:ignore="PluralsCandidate">%1$d tasks added to queue</string>
    <string name="download_history">Downloads</string>
    <string name="no_download_records">No download records</string>
    <string name="file_not_found">File not found</string>
    <string name="vid_copied">Video ID copied</string>
    <string name="delete_record">Delete</string>
    <string name="delete_local_file">Delete local file</string>
    <string name="clear_history">Clear history</string>
    <string name="clear_history_confirmation">Clear all download history?</string>
    <string name="status_queued">Queued</string>
    <string name="status_downloading_simple">Downloading</string>
    <string name="status_merging">Merging…</string>
    <string name="status_completed">Completed</string>
    <string name="status_cancelled">Cancelled</string>
    <string name="status_failed">Failed</string>
    <string name="type_playlist">Playlist</string>
    <string name="type_video">Video</string>
    <string name="type_audio">Audio</string>
    <string name="type_subtitle">Subtitle</string>
    <string name="type_thumbnail">Thumbnail</string>
    <string name="status_paused">Paused</string>
    <string name="download_action_open_file">Open file</string>
    <string name="download_action_redownload">Download again</string>
    <string name="download_action_retry">Retry download</string>
    <string name="download_action_cancel">Cancel download</string>
    <string name="download_action_copy_video_id">Copy video ID</string>
    <string name="download_action_pause">Pause download</string>
    <string name="download_action_resume">Resume download</string>
    <string name="download_progress_with_total">%1$sMB/%2$sMB(%3$d%%)</string>
    <string name="download_progress_simple">%1$sMB</string>
    <string name="download_playlist_summary" tools:ignore="PluralsCandidate">%1$d / %2$d items\n(%3$d%%)</string>
    <string name="filename">Filename</string>
    <string name="preparing_download">Preparing download…</string>
    <string name="downloading_file">Downloading: %1$s</string>
    <string name="downloads_running" tools:ignore="PluralsCandidate">%1$d downloads in progress</string>
    <string name="playlist_download_title_placeholder">Playlist</string>
    <string name="playlist_download_summary" tools:ignore="PluralsCandidate">%1$d selected / %2$d ready / %3$d total</string>
    <string name="playlist_download_select_all">Select all</string>
    <string name="playlist_download_options">Download options</string>
    <string name="playlist_download_loading">Loading playlist…</string>
    <string name="playlist_download_empty">Playlist is empty</string>
    <string name="playlist_download_prepare_progress">Preparing %1$d / %2$d</string>
    <string name="playlist_download_status_loading">Loading</string>
    <string name="playlist_download_status_ready">Ready</string>
    <string name="playlist_download_status_unavailable">Unavailable</string>
    <string name="playlist_download_status_failed">Failed</string>
    <string name="playlist_download_status_preparing">Preparing</string>
    <string name="playlist_download_status_queued">Queued</string>
    <string name="playlist_download_status_partial">Partial</string>
    <string name="playlist_download_status_canceled">Canceled</string>
    <string name="playlist_download_batch_added" tools:ignore="PluralsCandidate">%1$d items added</string>
    <string name="playlist_download_batch_added_before_cancel" tools:ignore="PluralsCandidate">%1$d items added before batch was canceled</string>
    <string name="playlist_download_batch_segment_partial" tools:ignore="PluralsCandidate">%1$d partial</string>
    <string name="playlist_download_batch_segment_failed" tools:ignore="PluralsCandidate">%1$d failed</string>
    <string name="playlist_download_started">Playlist download started</string>
    <string name="mini_bar_restore">Open player</string>
    <string name="mini_bar_previous">Previous video</string>
    <string name="mini_bar_next">Next video</string>
    <string name="mini_bar_play">Play</string>
    <string name="mini_bar_pause">Pause</string>
    <string name="mark_as_watched">Mark as watched</string>
    <string name="mark_as_unwatched">Mark as unwatched</string>
    <string name="marked_as_watched">Marked as watched</string>
    <string name="marked_as_unwatched">Marked as unwatched</string>
    <string name="block_channel">Block channel</string>
    <string name="block_channel_named">Block %1$s</string>
    <string name="block_channel_confirm">Hide all videos from %1$s?</string>
    <string name="block">Block</string>
    <string name="channel_blocked">%1$s blocked</string>
    <string name="looking_up_channel">Looking up the channel…</string>
    <string name="channel_lookup_failed">Could not find the channel of this video</string>
    <string name="login_subtitle">Sign in with your Google account</string>
    <string name="nav_home">Home</string>
    <string name="nav_subscriptions">Subscriptions</string>
    <string name="play_next">Play next</string>
    <string name="queue_item_play_next">Plays next</string>
    <string name="queue_item_already_playing">This video is already playing</string>
    <string name="no_suggestions">No suggested video to play next</string>
    <string name="watch_history_empty">No videos played yet.</string>
    <string name="watch_history_remove">Remove from history</string>
    <string name="watch_history_clear">Clear history</string>
    <string name="watch_history_clear_confirm">Remove every video from the watch history?</string>
    <string name="fetching_download_links">Fetching download links…</string>
    <string name="local_history">Local History</string>
    <string name="video_unavailable_skipped">Video unavailable, skipped</string>
    <string name="action_seek_back_10">Back 10 seconds</string>
    <string name="action_seek_forward_10">Forward 10 seconds</string>
    <string name="search_hint">Search TestTube</string>
    <string name="action_search">Search</string>
    <string name="feed_views">%1$s views</string>
    <string name="feed_live">LIVE</string>
    <string name="feed_videos">%1$s videos</string>
    <string name="feed_subscribers">%1$s subscribers</string>
    <string name="feed_channel">Channel</string>
    <string name="feed_empty">Nothing to show yet</string>
    <string name="feed_sign_in">Sign in to see your subscriptions</string>
    <string name="feed_error">Couldn\'t load. Pull down to try again.</string>
    <string name="search_no_results">No results</string>
    <string name="watch_up_next">Up next</string>
    <string name="watch_likes">%1$s likes</string>
    <string name="page_play_all">Play all</string>
    <string name="subs_use_account">Use my YouTube account</string>
    <string name="watch_tab_description">Description</string>
    <string name="watch_tab_chat">Chat</string>
    <string name="watch_chat_hint">Live chat is active during live streams and premieres.</string>
    <string name="watch_no_suggestions">No suggestions available</string>
    <string name="watch_tab_comments">Comments</string>
    <string name="watch_comments_empty">No comments</string>
    <string name="watch_comments_disabled">Comments are turned off for this video</string>
    <string name="watch_comment_likes">%d likes</string>
    <string name="watch_comment_pinned">Pinned</string>
    <string name="subs_local_empty">No channels yet. Tap Manage to add or import channels, or follow them from a video.</string>
    <string name="subs_manage">Manage</string>
    <string name="subs_manage_title">Followed channels (%d)</string>
</resources>